--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,11 @@
         android:textSize="18sp"
         android:id="@+id/tvAddress"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_Lat_Long"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
